...
  const width = screenDimensions.width

  const Item = ({ name, onPress, fav, index }) => {
    let size = 32
    const [fv, setFv] = React.useState(fav)
    return <TouchableOpacity
      testID="zikr-item"
      onPress={onPress}
      style={{
        width: width - 20,
        height: 48,
        ...getDirectionalMixedSpacing({ marginLeft: 10, marginRight: 10 }),
        marginTop: 5,
...
      </LinearGradient>
    );
  };

  let p = ""
  return (
    <View style={{ flex: 1 }} testID="home-screen">
      {s ? (
        <SearchHeader />
      ) : (
        <AppHeader
          title={t('app.name')}
          isHome={true}
...
